--- a/My Collection.bib
+++ b/My Collection.bib
@@ -1,3 +1,5 @@
+I MADE LOTS OF MEANINGLESS CHANGES HERE!
+
 @article{Lester2015,
 abstract = {We demonstrate rapid loading of a small array of optical tweezers with a single {\$}{\^{}}{\{}87{\}}{\$}Rb atom per site. We find that loading efficiencies of up to 90{\%} per tweezer are achievable in less than 170 ms for traps separated by more than {\$}1.7 \backslash,\backslashmu\backslashtext{\{}m{\}}{\$}. Interestingly, we find the load efficiency is affected by nearby traps and present the efficiency as a function of the spacing between two optical tweezers. This enhanced loading, combined with subsequent rearranging of filled sites, will enable the study of quantum many-body systems via quantum gas assembly.},
 archivePrefix = {arXiv},
@@ -14,6 +16,9 @@ url = {http://journals.aps.org/prl/abstract/10.1103/PhysRevLett.115.073003},
 volume = {115},
 year = {2015}
 }
+
+I MADE LOTS OF MEANINGLESS CHANGES HERE!
+
 @article{Kaufman2012,
 abstract = {We report cooling of a single neutral atom to its three-dimensional vibrational ground state in an optical tweezer. After employing Raman sideband cooling for tens of milliseconds, we measure via sideband spectroscopy a three-dimensional ground-state occupation of about 90{\%}. We further observe coherent control of the spin and motional state of the trapped atom. Our demonstration shows that an optical tweezer, formed simply by a tightly focused beam of light, creates sufficient confinement for efficient sideband cooling. This source of ground-state neutral atoms will be instrumental in numerous quantum simulation and logic applications that require a versatile platform for storing and manipulating ultracold single neutral atoms. For example, these results will improve current optical-tweezer experiments studying atom-photon coupling and Rydberg quantum logic gates, and could provide new opportunities such as rapid production of single dipolar molecules or quantum simulation in tweezer arrays.},
 archivePrefix = {arXiv},
@@ -31,6 +36,9 @@ url = {http://journals.aps.org/prx/abstract/10.1103/PhysRevX.2.041014},
 volume = {2},
 year = {2012}
 }
+
+I MADE LOTS OF MEANINGLESS CHANGES HERE!
+
 @article{Kaufman2015a,
 abstract = {To advance quantum information science a constant pursuit is the search for physical systems that meet the stringent requirements for creating and preserving quantum entanglement. In atomic physics, robust two-qubit entanglement is typically achieved by strong, long-range interactions in the form of Coulomb interactions between ions or dipolar interactions between Rydberg atoms. While these interactions allow fast gates, atoms subject to these interactions must overcome the associated coupling to the environment and cross-talk among qubits. Local interactions, such as those requiring significant wavefunction overlap, can alleviate these detrimental effects yet present a new challenge: To distribute entanglement, qubits must be transported, merged for interaction, and then isolated for storage and subsequent operations. Here we show how, via a mobile optical tweezer, it is possible to prepare and locally entangle two ultracold neutral atoms, and then separate them while preserving their entanglement. While ultracold neutral atom experiments have measured dynamics consistent with spin entanglement, we are now able to demonstrate two-particle coherence via application of a local gradient and parity measurements; this new entanglement-verification protocol could be applied to arbitrary spin-entangled states of spatially-separated atoms. The local entangling operation is achieved via ultracold spin-exchange interactions, and quantum tunneling is used to combine and separate atoms. Our toolset provides a framework for dynamically entangling remote qubits via local operations within a large-scale quantum register.},
 archivePrefix = {arXiv},
